# l2n-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
cmake/: c2ba-glsl-shaders.cmake
resources/: to_cpp.py
src/: ViewController.cpp  ViewController.hpp  main.cpp  shaders.cpp  shaders.hpp  tinymt32.cpp  tinymt32.hpp  tinymt32dc.0.1048576.cpp  tinymt32dc.hpp
src/imgui/: imgui_impl_glfw_gl3.cpp
src/shaders/: rand_TausLCG.cs.glsl  rand_tinymt32.cs.glsl  sphere_pathtracing.cs.glsl  triangle.fs.glsl  triangle.vs.glsl  triangle_pathtracing.cs.glsl  uv.cs.glsl
